<resources>
    <string name="app_name">GRAD</string>
    <!-- TODO: Remove or change this placeholder text -->

    <string name="title_home">Home</string>
    <string name="logo">GRAD</string>
    <string name="hint_first">First Name</string>
    <string name="hint_last">Last Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_password_again">Retype Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_register_short">Register</string>
    <string name="action_themes_light">Light</string>
    <string name="action_themes_dark">Dark</string>
    <string name="weather_input">Enter City Name or Zip Code</string>
    <string name="weather_button">Get weather forecast</string>
    <string name="home_description">Profile picture</string>
    <string name="chat_something">Type something…</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Sign Out</string>
    <string name="night_mode">Night Mode</string>
    <string name="weather_preference">°C / °F</string>
    <string name="hint_themes">Hint</string>
    <string name="title_chat">Chat</string>
    <string name="title_contacts">Contacts</string>
    <string name="title_weather">Weather</string>

    <string name="base_url_service">https://team-2-tcss450-server-m-c.herokuapp.com/</string>
    <string name="base_url_auth">https://team-2-tcss450-webservice.herokuapp.com/</string>

    <string name="keys_json_contact_response">response</string>
    <string name="keys_json_contact_data">data</string>
    <string name="keys_json_contact_name">name</string>
    <string name="keys_json_contact_email">email</string>
    <string name="keys_json_contact_id">memberid</string>

    <string name="keys_json_chat_rowcount">rowCount</string>
    <string name="keys_json_chat_rows">rows</string>
    <string name="keys_json_chat_id">chatid</string>
    <string name="keys_json_chat_name">name</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="switch_sign_in">Remember Me</string>
    <string name="keys_shared_prefs">My Auth App Shared Prefs</string>
    <string name="keys_prefs_jwt">Sharded Prefs JWT</string>
    <string name="action_sign_out">Sign Out</string>

    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="create_chat">Create A New Chat</string>
    <string name="create_chat_name">Chat Name</string>
    <string name="confirm_new_chat">Create New Chat</string>
    <string name="cancel">Cancel</string>
    <string name="create_chat_id">User\'s Email</string>
    <string name="join_chat">Join a chat</string>
    <string name="add_contact_id">Contact ID</string>
    <string name="contact_fname">Contact First Name</string>
    <string name="contact_lname">Contact Last Name</string>
    <string name="contact_email">Contact Email</string>
    <string name="contact_username">Contact Username</string>
    <string name="add_contact">Add a new contact</string>
    <string name="leave_chat">Leave a Chat</string>
    <string name="user_email">User Email</string>
    <string name="remove_contact">Remove a Contact</string>
    <string name="remove_chat">Remove a Chat</string>
    <string name="keys_json_contact_firstname">firstname</string>
    <string name="keys_json_contact_lastname">lastname</string>
</resources>