<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/primaryColor">

    <TextView
        android:id="@+id/add_dialog_title"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:scaleType="center"
        android:text="@string/join_chat"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        android:textColor="@color/secondaryColor"
        android:background="@color/primaryColor"
        android:contentDescription="@string/app_name" />
    <EditText
        android:id="@+id/join_chat_id"
        android:inputType="textPersonName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/primaryDarkColor"
        android:textColorHint="@color/primaryLightColor"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/create_chat_id" />
</LinearLayout>