<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/backgroundColor"
    tools:context=".ui.SettingsFragment"
    tools:ignore="UseSwitchCompatOrMaterialXml">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_marginTop="0dp"
        android:src="@drawable/ic_baseline_person_pin_24"
        android:contentDescription="@string/home_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textStyle="bold|italic"
        android:textSize="18sp"
        android:textColor="@color/textColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="350dp"
        android:contentDescription="@string/home_description"
        android:src="@drawable/ic_contact_grey_80"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username" />

    <TextView
        android:id="@+id/name"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="0dp"
        android:layout_marginTop="53dp"
        android:textColor="@color/textColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="350dp"
        android:contentDescription="@string/home_description"
        android:src="@drawable/ic_baseline_email_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username" />

    <TextView
        android:id="@+id/email"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="0dp"
        android:layout_marginTop="82dp"
        android:textColor="@color/textColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginTop="130dp"
        android:layout_marginEnd="350dp"
        android:contentDescription="@string/home_description"
        android:src="@drawable/ic_baseline_mode_night_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username" />

    <Switch
        android:id="@+id/nightmode"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="0dp"
        android:layout_marginTop="132dp"
        android:checked="true"
        android:text="@string/night_mode"
        android:textColor="@color/textColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginTop="170dp"
        android:layout_marginEnd="350dp"
        android:contentDescription="@string/home_description"
        android:src="@drawable/ic_baseline_device_thermostat_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username" />

    <Switch
        android:id="@+id/weather"
        android:checked="true"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="0dp"
        android:layout_marginTop="172dp"
        android:text="@string/weather_preference"
        android:textColor="@color/textColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username" />
</androidx.constraintlayout.widget.ConstraintLayout>